Ediciòn tabla reporte

--- a/Pages/ventas.html
+++ b/Pages/ventas.html
@@ -39,10 +39,10 @@
        
         <tr>
            <th>Estado</th>
-           <th>Imagen</th>
+           <th>Número Pedido</th>
            <th>Producto</th>
            <th>SKU</th>
-           <th>Inventario</th>
+           <th>Cliente</th>
         </tr>
         <tr>
             <td>Activo</td>
