--- a/index.html
+++ b/index.html
@@ -61,31 +61,10 @@
     <div class = "clearfix">  </div>
 
    <section id = "content"> 
-
-   <article class ="article"> 
-       <h2>Tìtulo del artìculo</h2>
-       <p>Texto del articulo</p>
-   </article>
-
-   <article class ="article"> 
-       <h2>Tìtulo del artìculo</h2>
-       <p>Texto del articulo</p>
-   </article>
-
-   <article class ="article"> 
-       <h2>Tìtulo del artìculo</h2>
-       <p>Texto del articulo</p>
-   </article>
-
-   <article class ="article"> 
-       <h2>Tìtulo del artìculo</h2>
-       <p>Texto del articulo</p>
-   </article>
-
-   <article class ="article"> 
-       <h2>Tìtulo del artìculo</h2>
-       <p>Texto del articulo</p>
-   </article>
+     <figure>
+            <img class=imagen src="./Media/Vaqueros.png" alt="icon">
+    </figure>
+  
    
    </section> 
 
